--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node dev-server.js"
   },
   "author": "Edward Em",
   "license": "MIT",
@@ -27,18 +27,20 @@
     "webpack-hot-middleware": "^2.6.4"
   },
   "dependencies": {
+    "axios": "^0.15.3",
     "babel-polyfill": "^6.3.14",
     "babel-runtime": "^6.3.19",
-    "react": "^0.14.6",
-    "react-dom": "^0.14.6",
-    "react-redux": "^4.0.6",
-    "redux": "^3.0.6",
-    "axios": "^0.15.3",
     "classnames": "^2.2.5",
     "jwt-decode": "^2.1.0",
     "lodash": "^4.17.4",
+    "react": "^0.14.6",
+    "react-bootstrap-dropdown-menu": "^1.1.11",
+    "react-dom": "^0.14.6",
+    "react-redux": "^4.0.6",
     "react-router": "^3.0.2",
     "react-router-redux": "^4.0.7",
+    "react-simple-dropdown": "^3.1.0",
+    "redux": "^3.0.6",
     "redux-actions": "^1.2.1",
     "redux-localstorage": "^0.4.1",
     "redux-thunk": "^2.2.0",
